Fix Overflow Bug with WeatherCard Components in main-container.component.css
 Fixed Css bug, which caused weather cards to overflow and scrollable div was not implemented. Took whole day to fix it.

--- a/src/app/components/containers/main-container/main-container.component.css
+++ b/src/app/components/containers/main-container/main-container.component.css
@@ -1,6 +1,9 @@
 /* Resizing Main Container using flexbox */
 :host {
-    flex: 2 0 967px;
+    flex: 2 1 967px;
+
+    /* This rule prevents overflow of the weather cards in main container */
+    min-width: 0;
 
     /* Align Items Correctly inside Container */
     display: flex;
